--- a/styles.css
+++ b/styles.css
@@ -33,13 +33,13 @@ body {
 }
 
 .logo-banner {
-  height: 10rem;
+  height: max(11vw, 8rem);
   position: absolute;
-  top: 15%;
+  top: 20%;
   width: 100%;
 
   font-family: norse;
-  font-size: max(10vw, 6rem);
+  font-size: max(8vw, 6rem);
   color: whitesmoke;
 
   display: flex;
@@ -70,7 +70,7 @@ body {
 }
 
 .logo {
-  height: 9rem;
+  height: max(9vw, 7rem);
   padding-left: .5rem;
 }
 
