--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
   display: flex;
   flex: 1 1 40%;
   
-  min-width: 32vmax;
+  min-width: 24rem;
   position: relative;
 
   background: url(extras/halie-west-trees.jpg);
@@ -28,7 +28,7 @@ body {
 }
 
 .logo-banner {
-  height: 10rem;
+  height: 9rem;
   position: absolute;
   top: 20%;
   width: 100%;
@@ -41,7 +41,7 @@ body {
   justify-content: center;
   align-items: center;
 
-  background-color: rgba(0, 45, 0, 0.85);
+  background-color: rgba(0, 45, 0, 0.75);
 }
 
 .left-side-footer {
@@ -53,7 +53,7 @@ body {
   text-align: center;
   color: whitesmoke;
 
-  background-color: rgba(0, 45, 0, 0.85);
+  background-color: rgba(0, 45, 0, 0.75);
 }
 
 .footer-link {
@@ -100,19 +100,28 @@ h2 {
   flex-direction: column;
   gap: 1rem;
   padding-top: 1.5rem;
+  box-shadow: #5c5c5c 0px 2px 6px;
+  position: relative;
 }
 
 input {
-  appearance: none;
- 
   height: 1.75rem;
   width: 14rem;
-  border: 1px solid lightgrey;
+  border: 1px solid #b4b4b8;
   border-radius: 4px;
+  font-size: 1rem;
+  padding-left: 0.25rem;
+  padding-top: 0.15rem;
+}
+
+input[type="password"] {
+  border: 2px solid #a70000;
 }
 
 input:focus {
-  appearance: none;
+ outline: none;
+ border: 2px solid #005b96;
+ box-shadow: #5c5c5c 2px 2px 4px;
 }
 
 label {
@@ -132,7 +141,6 @@ label {
 }
 
 button {
-  appearance: none;
   border: none;
   border-radius: 6px;
   background-color: #596D48;
